--- a/index.html
+++ b/index.html
@@ -1,20 +1,127 @@
-Hello, world! This is my personal page hosted on GitHub pages.
+<!DOCTYPE html>
+<html lang="en">
+
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-138146269-1');
+</script>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Drew Griffen</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="akamon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Neucha|Montserrat|Sacramento|Passion+One" rel="stylesheet">
+</head>
+
+<body>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/griffenpic.jpg" width="20%" height="20%" alt="griffen-pic">
+      <h2>Hello, I'm Drew Griffen.</h2>
+      <p class="introduction">I'm an associate professor in the department of economics at the University of Tokyo.</p>
+      <a class="footer-link" href="Griffen_CV.pdf" style="text-decoration: none; font-size: 145%; color:#020203">CV</a>
+      <a class="footer-link" href="https://scholar.google.com/citations?user=Ombn8p4AAAAJ&hl=en" style="text-decoration: none"> <img src="images/google_scholar.png" alt="Google Scholar" height="25" width="25"> </a>
+      <a class="footer-link" href="https://www.linkedin.com/in/drew-griffen-a07aa4168/" style="text-decoration: none"> <img src="images/linkedin.png" alt="LinkedIn" height="25" width="25"> </a>
+    </div>
+    <div class="papers">
+      <h2>Research.</h2>
+      <hr>
+      <div class="papers-title">
+        <img class="code-img" src="images/scroll.png" alt="scroll-img">
+        <h2>Publications</h2>
+      </div>
+      <div class="papers-row">
+        <p>1. "<a href="https://www.sciencedirect.com/science/article/pii/S0167268122001081?dgcid=coauthor">Democratic institutions and social capital: Experimental evidence on school-based management from a developing country</a>", <i>Journal of Economic Behavior & Organization</i>, Volume 198, June 2022, Pages 267-279</p>
+        <p>2. "<a href="http://jhr.uwpress.org/content/54/3/604.short">Evaluating the Effects of Child Care Policies on Children's Cognitive Development and Maternal Labor Supply</a>", <i>Journal of Human Resources</i>, 2019 54 (3), 604-655</p>
+        <p>3. "<a href="http://www.journals.uchicago.edu/doi/abs/10.1086/691726">Assessing the Performance of Nonexperimental Estimators for Evaluating Head Start</a>", Andrew S. Griffen and Petra E. Todd, <i>Journal of Labor Economics</i> 35, no.
+          S1 (July 2017): S7-S63.</p>
+        <p>4. "<a href="http://www.sciencedirect.com/science/article/pii/S1570677X1500074X">Height and Calories in Early Childhood</a>" Andrew S. Griffen, <i>Economics & Human Biology</i>, Vol. 20, March 2016, 55-59</p>
+        <p>5. "<a href="http://www.sciencedirect.com/science/article/pii/S0889158315000222">Fertility and Maternal Labor Supply in Japan: Conflicting Policy Goals?</a>" Andrew S. Griffen, Makiko Nakamuro, and Tomohiko Inui, <i>Journal of the
+            Japanese and International Economies</i>, 38 (2015) 52 - 72</p>
+        <p>6. "<a href="http://www.sciencedirect.com/science/article/pii/S0885200612001007">The Relationship Between Child Care Subsidies and Children's Cognitive Development</a>" Laura E. Hawkinson, Andrew S. Griffen, Nianbo Dong, and Rebecca A.
+          Maynard, <i>Early Childhood Research Quarterly</i> 28 (2013) 388 - 404</p>
+      </div>
+      <div class="papers-title">
+        <img class="code-img" src="images/magnifying-glass.png" alt="magnifying-glass-img">
+        <h2>Working papers</h2>
+      </div>
+      <div class="papers-row">
+        <!-- <p>Democratic Institutions and Social Capital: Experimental Evidence on School-Based Management from Burkina Faso. <a href="COGES.pdf">PAPER</a> <i>Under Review</i> </p> -->
+        <p>Decentralization of School Governance and Human Capital Formation: Experimental Evidence from a Developing Country. <i>Under Review</i> </p>
+      </div>
+  </div>
+
+  <br>
+
+  <div class="teaching">
+    <h2>Research Assistant.</h2>
+    <hr>
+    <p>I am looking for an UTokyo undergraduate or graduate student to help with a literature review. Please email for details and to apply.</p>
+  </div>
+
+  <!-- <br>
+
+  <div class="teaching">
+    <h2>Research Assistant.</h2>
+    <hr>
+    <p>1. A colleague Pedro Franco de Campos Pinto is looking for an RA. Please check his website here for more details.</p>
+      <p>1. I am looking for a research assistant who knows how to write code
+        for web scraping to construct a data set on rental price housing in Tokyo.</p>
+        https://sites.google.com/site/pedrofdcp/home
+      <p>2. I am looking for a research assistant to help with a literature review.</p>
+      <p>3. I am looking for a research assistant to help with a data application (Japanese required).</p>
+      <p>Please contact me for additional details if you are interested in any of these positions.</p>
+  </div> -->
+
+  <br>
+
+  <div class="teaching">
+    <h2>Teaching.</h2>
+    <hr>
+      <p>Graduate (A1A2 2023)</p>
+      <p style="text-indent: 40px">Empirical Microeconomics</p>
+      <p style="text-indent: 40px">R for Empirical Economics Research*</p>
+      <br>
+      <p>Undergraduate (A1A2 2023)</p>
+      <p style="text-indent: 40px">Economics and Statistics at <a href="https://peak.c.u-tokyo.ac.jp/">PEAK UTokyo</a></p>
+      <br>
+      <p>Undergraduate small-group seminars (A1A2 2023)</p>
+      <p style="text-indent: 40px">Business Data Science with R</p>
+      <p style="text-indent: 40px">Nobel Prizes in Economics</p>
+      <br>
+      <p>* Please install R before the first class and please pass this message to other enrolled students. Also, don't hesitate to contact me if you are having any difficulty!</p>
+  </div>
+  <br>
+  <br>
+
+  <div class="contact-me">
+    <h2>Contact.</h2>
+    <hr>
+    <h3>Mailing address</h3>
+    <p>Economics Research Building <br> The University of Tokyo <br> 7-3-1 Hongo, Bunkyo-ku <br> Tokyo 113-0033, Japan</p>
+    <h3>Office</h3>
+    <p><a href="https://goo.gl/maps/ZFtNMYrDCaeo88fF8" style="text-decoration: none">Economics Research Building 902, Hongo Campus, University of Tokyo</a>    </p>
+
+    <h3>Email</h3>
+    <p>griffen (at) e.u-tokyo.ac.jp</p>
+  </div>
+
+  <div class="bottom-container">
+    <!-- <a class="footer-link" href="http://www.griffen.e.u-tokyo.ac.jp/">CV</a>
+    <a class="footer-link" href="http://www.griffen.e.u-tokyo.ac.jp/">Google Scholar</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/drew-griffen-a07aa4168">LinkedIn</a> -->
+    <!-- <img class="fuji" src="images/fuji-mountain.png" alt="fuji-mountain"> -->
+    <p>© 2023 Andrew S. Griffen.</ps>
+  </div>
+
+</body>
+</html>
 
 
-<div class="teaching">
-<h2>Teaching.</h2>
-<hr>
-  <p>Graduate (A1A2 2022)</p>
-  <p style="text-indent: 40px">Empirical Microeconomics</p>
-  <p style="text-indent: 40px">R for Empirical Economics Research*</p>      <!-- <p>R for empirical microeconomics research A1A2 2020</p> -->
-  <!-- <p style="text-indent: 80px"><a href="OECD.csv">OECD</a> &ensp; <a href="ISO.csv">ISO</a> </p> -->
-  <br>
-  <p>Undergraduate (A1A2 2022)</p>
-  <p style="text-indent: 40px">Economics and Statistics at <a href="https://peak.c.u-tokyo.ac.jp/">PEAK UTokyo</a></p>
-  <br>
-  <p>Undergraduate small-group seminars (A1A2 2022)</p>
-  <p style="text-indent: 40px">Python for Data Science</p>
-  <p style="text-indent: 40px">Nobel Prizes in Economics</p>
-  <br>
-  <p>* Please install R before the first class and please pass this message to other enrolled students. Also, don't hestitate to contact me if you are having any difficulty!</p>
-</div>
