Updated for semester

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
   <br>
 
-  <div class="teaching">
+<!--   <div class="teaching">
     <h2>Research Assistant.</h2>
     <hr>
     <p>I am looking for an UTokyo undergraduate or graduate student to help with a literature review. Please email for details and to apply.</p>
   </div>
-
+ -->
   <!-- <br>
 
   <div class="teaching">
