--- a/index.html
+++ b/index.html
@@ -49,52 +49,40 @@
         <p>6. "<a href="http://www.sciencedirect.com/science/article/pii/S0885200612001007">The Relationship Between Child Care Subsidies and Children's Cognitive Development</a>" Laura E. Hawkinson, Andrew S. Griffen, Nianbo Dong, and Rebecca A.
           Maynard, <i>Early Childhood Research Quarterly</i> 28 (2013) 388 - 404</p>
       </div>
-      <div class="papers-title">
+<!--       <div class="papers-title">
         <img class="code-img" src="images/magnifying-glass.png" alt="magnifying-glass-img">
         <h2>Working papers</h2>
       </div>
       <div class="papers-row">
-        <!-- <p>Democratic Institutions and Social Capital: Experimental Evidence on School-Based Management from Burkina Faso. <a href="COGES.pdf">PAPER</a> <i>Under Review</i> </p> -->
-        <p>Decentralization of School Governance and Human Capital Formation: Experimental Evidence from a Developing Country. <i>Under Review</i> </p>
-      </div>
+        <a href="Griffen_CV.pdf">Decentralization, Democracy, and Human Capital Formation: Experimental Evidence from Burkina Faso.<a/>  <i>Under Review</i> </p>
+        <a href="Griffen_CV.pdf">Education and Information Interventions on Children's Cognitive and Life Skills: Experimental Evidence from Poor Urban Households in the Philippines<a/> <i>Under Review</i>  </p>
+        <a href="Griffen_CV.pdf">School-Based Management and Social Preferences: Experimental Evidence from a Developing Economy<a/> <i>Under Review</i></p>
+      </div> -->
   </div>
 
   <br>
-
 <!--   <div class="teaching">
     <h2>Research Assistant.</h2>
     <hr>
     <p>I am looking for an UTokyo undergraduate or graduate student to help with a literature review. Please email for details and to apply.</p>
   </div>
- -->
-  <!-- <br>
-
-  <div class="teaching">
-    <h2>Research Assistant.</h2>
-    <hr>
-    <p>1. A colleague Pedro Franco de Campos Pinto is looking for an RA. Please check his website here for more details.</p>
-      <p>1. I am looking for a research assistant who knows how to write code
-        for web scraping to construct a data set on rental price housing in Tokyo.</p>
-        https://sites.google.com/site/pedrofdcp/home
-      <p>2. I am looking for a research assistant to help with a literature review.</p>
-      <p>3. I am looking for a research assistant to help with a data application (Japanese required).</p>
-      <p>Please contact me for additional details if you are interested in any of these positions.</p>
-  </div> -->
-
   <br>
+-->
 
   <div class="teaching">
     <h2>Teaching.</h2>
     <hr>
-      <p>Graduate (A1A2 2023)</p>
-      <p style="text-indent: 40px">Empirical Microeconomics</p>
+      <p>Graduate (S1 2024)</p>
       <p style="text-indent: 40px">R for Empirical Economics Research*</p>
       <br>
-      <p>Undergraduate (A1A2 2023)</p>
+      <p>Graduate (A1A2 2024)</p>
+      <p style="text-indent: 40px">Empirical Microeconomics</p>
+      <br>
+      <p>Undergraduate (A1A2 2024)</p>
       <p style="text-indent: 40px">Economics and Statistics at <a href="https://peak.c.u-tokyo.ac.jp/">PEAK UTokyo</a></p>
       <br>
-      <p>Undergraduate small-group seminars (A1A2 2023)</p>
-      <p style="text-indent: 40px">Business Data Science with R</p>
+      <p>Undergraduate small-group seminars (A1A2 2024)</p>
+      <p style="text-indent: 40px">Python for Data Science</p>
       <p style="text-indent: 40px">Nobel Prizes in Economics</p>
       <br>
       <p>* Please install R before the first class and please pass this message to other enrolled students. Also, don't hesitate to contact me if you are having any difficulty!</p>
@@ -119,7 +107,7 @@
     <a class="footer-link" href="http://www.griffen.e.u-tokyo.ac.jp/">Google Scholar</a>
     <a class="footer-link" href="https://www.linkedin.com/in/drew-griffen-a07aa4168">LinkedIn</a> -->
     <!-- <img class="fuji" src="images/fuji-mountain.png" alt="fuji-mountain"> -->
-    <p>© 2023 Andrew S. Griffen.</ps>
+    <p>© 2024 Andrew S. Griffen.</ps>
   </div>
 
 </body>
