--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <div class="middle-container">
     <div class="profile">
       <img src="images/griffenpic.jpg" width="20%" height="20%" alt="griffen-pic">
-      <h2>Hello, I'm Drew Griffen.</h2>
-      <p class="introduction">I'm an associate professor in the department of economics at the University of Tokyo.</p>
-      <a class="footer-link" href="Griffen_CV.pdf" style="text-decoration: none; font-size: 145%; color:#020203">CV</a>
+      <h2>Andrew S. Griffen</h2>
+      <p class="introduction">Associate Professor, Faculty of Economics, University of Tokyo</p>
+      <p class="introduction"></p>Ph.D. in Economics, University of Pennsylvania, 2012</p>
       <a class="footer-link" href="https://scholar.google.com/citations?user=Ombn8p4AAAAJ&hl=en" style="text-decoration: none"> <img src="images/google_scholar.png" alt="Google Scholar" height="25" width="25"> </a>
       <a class="footer-link" href="https://www.linkedin.com/in/drew-griffen-a07aa4168/" style="text-decoration: none"> <img src="images/linkedin.png" alt="LinkedIn" height="25" width="25"> </a>
     </div>
@@ -39,25 +39,26 @@
         <h2>Publications</h2>
       </div>
       <div class="papers-row">
-        <p>1. "<a href="https://www.sciencedirect.com/science/article/pii/S0167268122001081?dgcid=coauthor">Democratic institutions and social capital: Experimental evidence on school-based management from a developing country</a>", <i>Journal of Economic Behavior & Organization</i>, Volume 198, June 2022, Pages 267-279</p>
-        <p>2. "<a href="http://jhr.uwpress.org/content/54/3/604.short">Evaluating the Effects of Child Care Policies on Children's Cognitive Development and Maternal Labor Supply</a>", <i>Journal of Human Resources</i>, 2019 54 (3), 604-655</p>
-        <p>3. "<a href="http://www.journals.uchicago.edu/doi/abs/10.1086/691726">Assessing the Performance of Nonexperimental Estimators for Evaluating Head Start</a>", Andrew S. Griffen and Petra E. Todd, <i>Journal of Labor Economics</i> 35, no.
+        <p>1. "<a href="">Misfortune Seldom Comes Alone: Evidence from Typhoon Effects During Covid-19 Quarantines in the Philippines</a>", Yingxue Jin, Makiko Nakamuro, Yasuyuki Sawada, Andrew S. Griffen, Tsend-Ayush Sosorbaram, and Yukichi Mano, <i>Asian Development Review </i>, forthcoming </p>
+        <p>2. "<a href="https://www.sciencedirect.com/science/article/pii/S0167268122001081?dgcid=coauthor">Democratic institutions and social capital: Experimental evidence on school-based management from a developing country</a>", Yasuyuki Sawada, Takeshi Aida, Andrew S. Griffen, Eiji Kozuka, Haruko Noguchi, and Yasuyuki Todo, <i>Journal of Economic Behavior & Organization</i>, Volume 198, June 2022, Pages 267-279</p>
+        <p>3. "<a href="http://jhr.uwpress.org/content/54/3/604.short">Evaluating the Effects of Child Care Policies on Children's Cognitive Development and Maternal Labor Supply</a>", Andrew S. Griffen, <i>Journal of Human Resources</i>, 2019 54 (3), 604-655</p>
+        <p>4. "<a href="http://www.journals.uchicago.edu/doi/abs/10.1086/691726">Assessing the Performance of Nonexperimental Estimators for Evaluating Head Start</a>", Andrew S. Griffen and Petra E. Todd, <i>Journal of Labor Economics</i> 35, no.
           S1 (July 2017): S7-S63.</p>
-        <p>4. "<a href="http://www.sciencedirect.com/science/article/pii/S1570677X1500074X">Height and Calories in Early Childhood</a>" Andrew S. Griffen, <i>Economics & Human Biology</i>, Vol. 20, March 2016, 55-59</p>
-        <p>5. "<a href="http://www.sciencedirect.com/science/article/pii/S0889158315000222">Fertility and Maternal Labor Supply in Japan: Conflicting Policy Goals?</a>" Andrew S. Griffen, Makiko Nakamuro, and Tomohiko Inui, <i>Journal of the
+        <p>5. "<a href="http://www.sciencedirect.com/science/article/pii/S1570677X1500074X">Height and Calories in Early Childhood</a>" Andrew S. Griffen, <i>Economics & Human Biology</i>, Vol. 20, March 2016, 55-59</p>
+        <p>6. "<a href="http://www.sciencedirect.com/science/article/pii/S0889158315000222">Fertility and Maternal Labor Supply in Japan: Conflicting Policy Goals?</a>" Andrew S. Griffen, Makiko Nakamuro, and Tomohiko Inui, <i>Journal of the
             Japanese and International Economies</i>, 38 (2015) 52 - 72</p>
-        <p>6. "<a href="http://www.sciencedirect.com/science/article/pii/S0885200612001007">The Relationship Between Child Care Subsidies and Children's Cognitive Development</a>" Laura E. Hawkinson, Andrew S. Griffen, Nianbo Dong, and Rebecca A.
+        <p>7. "<a href="http://www.sciencedirect.com/science/article/pii/S0885200612001007">The Relationship Between Child Care Subsidies and Children's Cognitive Development</a>" Laura E. Hawkinson, Andrew S. Griffen, Nianbo Dong, and Rebecca A.
           Maynard, <i>Early Childhood Research Quarterly</i> 28 (2013) 388 - 404</p>
       </div>
-<!--       <div class="papers-title">
+      <div class="papers-title">
         <img class="code-img" src="images/magnifying-glass.png" alt="magnifying-glass-img">
         <h2>Working papers</h2>
       </div>
       <div class="papers-row">
-        <a href="Griffen_CV.pdf">Decentralization, Democracy, and Human Capital Formation: Experimental Evidence from Burkina Faso.<a/>  <i>Under Review</i> </p>
-        <a href="Griffen_CV.pdf">Education and Information Interventions on Children's Cognitive and Life Skills: Experimental Evidence from Poor Urban Households in the Philippines<a/> <i>Under Review</i>  </p>
-        <a href="Griffen_CV.pdf">School-Based Management and Social Preferences: Experimental Evidence from a Developing Economy<a/> <i>Under Review</i></p>
-      </div> -->
+        <a href="Sawada_et_al_SBM_HC.pdf">Democracy and Human Capital: Experimental Evidence from Burkina Faso</a> </p>
+        <a href="SALT_RCT.pdf">Null Impacts of Education and Information Interventions on Children’s Cognitive and Noncognitive Skills: Experimental Evidence from Poor Urban Households in the Philippines</a> </p>
+        <a>School-Based Management and Social Preferences: Experimental Evidence from a Developing Economy</a>, <i>coming soon</i> </p>
+      </div>
   </div>
 
   <br>
@@ -72,20 +73,16 @@
   <div class="teaching">
     <h2>Teaching.</h2>
     <hr>
-      <p>Graduate (S1 2024)</p>
-      <p style="text-indent: 40px">R for Empirical Economics Research*</p>
+      <p>2025 S1S2</p>
+      <p style="text-indent: 40px">R for Empirical Economics Research* (graduate), Mondays 5th period</p>
+      <p style="text-indent: 40px">R for Data Science * (undergraduate seminar), Mondays 6th period</p>      
       <br>
-      <p>Graduate (A1A2 2024)</p>
-      <p style="text-indent: 40px">Empirical Microeconomics</p>
+      <p>2025 A1A2</p>
+      <p style="text-indent: 40px">Empirical Microeconomics (graduate), Mondays 5th period</p>
+      <p style="text-indent: 40px">Nobel Prizes in Economics (undergraduate seminar), Mondays 6th period</p>
+      <p style="text-indent: 40px">Economics & Statistics (<a href="https://peak.c.u-tokyo.ac.jp/">PEAK</a>), Tuesdays 6th period</p>
       <br>
-      <p>Undergraduate (A1A2 2024)</p>
-      <p style="text-indent: 40px">Economics and Statistics at <a href="https://peak.c.u-tokyo.ac.jp/">PEAK UTokyo</a></p>
-      <br>
-      <p>Undergraduate small-group seminars (A1A2 2024)</p>
-      <p style="text-indent: 40px">Python for Data Science</p>
-      <p style="text-indent: 40px">Nobel Prizes in Economics</p>
-      <br>
-      <p>* Please install R before the first class and please pass this message to other enrolled students. Also, don't hesitate to contact me if you are having any difficulty!</p>
+      <p>* Please install R and RStudio before the first class/zemi and please pass this message to other enrolled students. Also, don't hesitate to contact me if you are having any difficulty!</p>
   </div>
   <br>
   <br>
@@ -107,7 +104,7 @@
     <a class="footer-link" href="http://www.griffen.e.u-tokyo.ac.jp/">Google Scholar</a>
     <a class="footer-link" href="https://www.linkedin.com/in/drew-griffen-a07aa4168">LinkedIn</a> -->
     <!-- <img class="fuji" src="images/fuji-mountain.png" alt="fuji-mountain"> -->
-    <p>© 2024 Andrew S. Griffen.</ps>
+    <p>© 2025 Andrew S. Griffen.</ps>
   </div>
 
 </body>
