--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Drew Griffen</title>
+  <title>Andrew S. Griffen</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="akamon.ico">
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Neucha|Montserrat|Sacramento|Passion+One" rel="stylesheet">
