--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="profile">
       <img src="images/griffenpic.jpg" width="20%" height="20%" alt="griffen-pic">
       <h2>Andrew S. Griffen</h2>
-      <p class="introduction">Associate Professor, Faculty of Economics, University of Tokyo</p>
-      <p class="introduction"></p>Ph.D. in Economics, University of Pennsylvania, 2012</p>
+      <p class="introduction">Associate Professor, Faculty of Economics, <a href="https://www.e.u-tokyo.ac.jp/index-e.html" target="_blank">University of Tokyo</a></p>
+      <p class="introduction"></p>Ph.D. in Economics, <a href="https://economics.sas.upenn.edu/" target="_blank">University of Pennsylvania</a> , 2012</p>
       <a class="footer-link" href="https://scholar.google.com/citations?user=Ombn8p4AAAAJ&hl=en" style="text-decoration: none"> <img src="images/google_scholar.png" alt="Google Scholar" height="25" width="25"> </a>
       <a class="footer-link" href="https://www.linkedin.com/in/andrew-s-griffen-a07aa4168/" style="text-decoration: none"> <img src="images/linkedin.png" alt="LinkedIn" height="25" width="25"> </a>
     </div>
