--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a class="footer-link" href="https://www.linkedin.com/in/andrew-s-griffen-a07aa4168/" style="text-decoration: none"> <img src="images/linkedin.png" alt="LinkedIn" height="25" width="25"> </a>
     </div>
     <div class="papers">
-      <h2>Research.</h2>
+      <h2>Research</h2>
       <hr>
       <div class="papers-title">
         <img class="code-img" src="images/scroll.png" alt="scroll-img">
@@ -71,7 +71,7 @@
 -->
 
   <div class="teaching">
-    <h2>Teaching.</h2>
+    <h2>Teaching</h2>
     <hr>
       <p>2025 S1S2</p>
       <p style="text-indent: 40px">R for Empirical Economics Research* (graduate), Mondays 5th period</p>
@@ -88,7 +88,7 @@
   <br>
 
   <div class="contact-me">
-    <h2>Contact.</h2>
+    <h2>Contact</h2>
     <hr>
     <h3>Mailing address</h3>
     <p>Economics Research Building <br> The University of Tokyo <br> 7-3-1 Hongo, Bunkyo-ku <br> Tokyo 113-0033, Japan</p>
