Added another target blank

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <p>2025 A1A2</p>
       <p style="text-indent: 40px">Empirical Microeconomics (graduate), Mondays 5th period</p>
       <p style="text-indent: 40px">Nobel Prizes in Economics (undergraduate zemi), Mondays 6th period</p>
-      <p style="text-indent: 40px">Economics & Statistics (<a href="https://peak.c.u-tokyo.ac.jp/">PEAK</a>), Tuesdays 6th period</p>
+      <p style="text-indent: 40px">Economics & Statistics (<a href="https://peak.c.u-tokyo.ac.jp/" target="_blank">PEAK</a>), Tuesdays 6th period</p>
       <br>
       <p>* Please install R and RStudio before the first class/zemi and please pass this message to other enrolled students. Also, don't hesitate to contact me if you are having any difficulty!</p>
   </div>
