--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2>Publications</h2>
       </div>
       <div class="papers-row">
-        <p>1. "<a href="">Misfortune Seldom Comes Alone: Evidence from Typhoon Effects During Covid-19 Quarantines in the Philippines</a>", Yingxue Jin, Makiko Nakamuro, Yasuyuki Sawada, Andrew S. Griffen, Tsend-Ayush Sosorbaram, and Yukichi Mano, <i>Asian Development Review </i>, forthcoming </p>
+        <p>1. "<a href="https://www.worldscientific.com/doi/full/10.1142/S0116110525400074?srsltid=AfmBOorObGidNRZ9A7gw_8hHYxT_Q0zO1d-peMCA-0s9Koc2f-IkgjkW">Misfortune Seldom Comes Alone: Evidence from Typhoon Effects During Covid-19 Quarantines in the Philippines</a>", Yingxue Jin, Makiko Nakamuro, Yasuyuki Sawada, Andrew S. Griffen, Tsend-Ayush Sosorbaram, and Yukichi Mano, <i>Asian Development Review </i>, Vol. 42, No. 02, pp. 83-110 (2025) </p>
         <p>2. "<a href="https://www.sciencedirect.com/science/article/pii/S0167268122001081?dgcid=coauthor">Democratic institutions and social capital: Experimental evidence on school-based management from a developing country</a>", Yasuyuki Sawada, Takeshi Aida, Andrew S. Griffen, Eiji Kozuka, Haruko Noguchi, and Yasuyuki Todo, <i>Journal of Economic Behavior & Organization</i>, Volume 198, June 2022, Pages 267-279</p>
         <p>3. "<a href="http://jhr.uwpress.org/content/54/3/604.short">Evaluating the Effects of Child Care Policies on Children's Cognitive Development and Maternal Labor Supply</a>", Andrew S. Griffen, <i>Journal of Human Resources</i>, 2019 54 (3), 604-655</p>
         <p>4. "<a href="http://www.journals.uchicago.edu/doi/abs/10.1086/691726">Assessing the Performance of Nonexperimental Estimators for Evaluating Head Start</a>", Andrew S. Griffen and Petra E. Todd, <i>Journal of Labor Economics</i> 35, no.
