--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
       <a class="footer-link" href="https://scholar.google.com/citations?user=Ombn8p4AAAAJ&hl=en" style="text-decoration: none"> <img src="images/google_scholar.png" alt="Google Scholar" height="25" width="25"> </a>
       <a class="footer-link" href="https://www.linkedin.com/in/andrew-s-griffen-a07aa4168/" style="text-decoration: none"> <img src="images/linkedin.png" alt="LinkedIn" height="25" width="25"> </a>
     </div>
+
+    <br>
+    <div class="teaching">
+      <h2>Research Assistant.</h2>
+      <hr>
+      <p>I am looking for a research assistant to help with a literature review. Please email for details and to apply!</p>
+    </div>
+    <br>
+
     <div class="papers">
       <h2>Research</h2>
       <hr>
@@ -60,15 +69,6 @@
         <a>School-Based Management and Social Preferences: Experimental Evidence from a Developing Economy</a>, <i>coming soon</i> </p>
       </div>
   </div>
-
-  <br>
-<!--   <div class="teaching">
-    <h2>Research Assistant.</h2>
-    <hr>
-    <p>I am looking for an UTokyo undergraduate or graduate student to help with a literature review. Please email for details and to apply.</p>
-  </div>
-  <br>
--->
 
   <div class="teaching">
     <h2>Teaching</h2>
